--- a/main.html
+++ b/main.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>sharable URLs</title>
+	</head>
   <body>
+	  <h3> https://localhost:8080/</h3>
+	  <form>
+		  <input type="text" id="name" name="name"/>
+		  <input type="date" id="year" name="year"/>
+		  <button type="submit" id="url">Submit</button>
+	  </form>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
