--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 	  <form>
 		  <input type="text" id="name" name="name"/>
 		  <input type="date" id="year" name="year"/>
-		  <button type="submit" id="url">Submit</button>
+		  <button type="submit" id="button">Submit</button>
 	  </form>
     <script type="text/javascript" src="./script.js">
 </script>
