--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	  <h3 id="url"> https://localhost:8080/</h3>
 	  <form>
 		  <input type="text" id="name" name="name"/>
-		  <input type="date" id="year" name="year"/>
+		  <input type="number" id="year" name="year"/>
 		  <button type="submit" id="button">Submit</button>
 	  </form>
     <script type="text/javascript" src="./script.js">
